# Interpreter

./: .gitignore  ByteCode.cpp  ByteCode.h  CMakeLists.txt  Halt.cpp  Halt.h  MemoryObject.cpp  MemoryObject.h  Printf.cpp  Printf.h  Pushc.cpp  Pushc.h  README.md  RunTimeStackObject.h  Set.cpp  Set.h  add_test.smp  cmpe_test.smp  cmpe_test.txt  cmpgt_test.smp  cmplt_test.smp  cmplt_test.txt  compiler_input.txt  div_test.smp  interpreter_input.smp  jmp_test.smp  main.cpp  main.h  pushvf_test.txt  sub_test.smp
Test/: Execution_Trace.txt  add_test.txt  cmpgt_test.txt  div_test.txt  interpreter_result.txt  jmp_test.txt  jmpc_test.smp  jmpc_test.txt  mul_test.smp  mul_test.txt  project_compiler.dms  project_interpreter.dms  pushvf_test.smp  sub_test.txt
Test/Structured_Tests_Final/: README.md
Test/Structured_Tests_Final/Compiler_Generated_Tests/: Peek_Poke.txt  Push_Pop.txt  Subroutines.txt
Test/Structured_Tests_Final/Manually_Generated_Tests/: test_generator.cpp
Test/Structured_Tests_Final/Outputs/: BasicsOutput.txt  ComparisonsOutput.txt  JumpsOutput.txt  MathOutput.txt  Peek_PokeOutput.txt  Push_PopOutput.txt  SubroutinesOutput.txt
codes/: Halt.h  Printf.cpp  Printf.h  Pushc.cpp  Pushc.h  Pushi.cpp  Pushi.h  Pushs.cpp  Pushs.h  add.cpp  add.h  call.cpp  call.h  cmpe.cpp  cmpe.h  cmpgt.cpp  cmpgt.h  cmplt.cpp  cmplt.h  div.cpp  div.h  halt.cpp  halt.h  jmp.cpp  jmp.h  jmpc.cpp  jmpc.h  mul.cpp  mul.h  peekc.cpp  peekc.h  peekf.cpp  peekf.h  peeki.cpp  peeki.h  peeks.cpp  peeks.h  pokec.cpp  pokec.h  pokef.cpp  (+33 more)
datastructs/: Buffer.h  ByteCode.h  FrameStack.h  MemoryObject.cpp  MemoryObject.h  RunTimeStackObject.cpp  RunTimeStackObject.h  Stack.cpp  Stack.h  Value.cpp  Value.h  rStack.cpp  rStack.h
